# smart-file-search

./: .env.example  .gitignore  LICENSE  Makefile  README.md  bucket-policy.json
.github/workflows/: issues-to-readme.yml
backend/: .env  .env.example  .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/.aws/terraform/: main.tf  outputs.tf  variables.tf
backend/app/: conftest.py  main.py
backend/app/chat/: __init__.py  models.py  router.py  service.py
backend/app/chat/tests/: __init__.py  test_models.py  test_router.py  test_service.py
backend/app/common/: exceptions.py  schemas.py
backend/app/core/: config.py
backend/app/file_exploration/: file_explorer.py  router.py  service.py
backend/app/file_exploration/strategies/: basic_explorer.py  gemini_explorer.py
backend/app/file_exploration/tests/: __init__.py  test_basic_explorer.py  test_file_explorer.py  test_gemini_explorer.py  test_service.py
backend/app/file_processing/: models.py  repository.py  schemas.py  service.py
backend/app/file_processing/tests/: __init__.py  test_repository.py
backend/app/file_processor/: dependencies.py  router.py
backend/app/health/: router.py
backend/app/health/tests/: test_heath.py
backend/app/infrastructure/: config.py
backend/app/infrastructure/dynamodb/: client.py  repository.py
backend/app/text_extraction/: service.py  text_extractor.py
backend/app/text_extraction/strategies/: markitdown.py
backend/app/uploads/: dependencies.py  router.py  s3_client.py  schemas.py  service.py
backend/app/uploads/tests/: test_uploads.py
backend/terraform/: main.tf
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Chat.tsx  DocumentViewer.tsx  FileUploader.tsx  MarkdownRenderer.tsx
frontend/src/context/: FileContext.tsx  fileContextTypes.ts  useFile.ts
frontend/src/pages/: Home.tsx  MarkdownViewer.tsx
frontend/src/services/: api.ts
terraform/: main.tf  variables.tf
