[project]
name = "smart-file-search-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "feliperooke",email = "felipe@rooke.com.br"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "dist/package.zip"