[tool.poetry]
name = "smart-file-search-backend"
version = "0.1.0"
description = "FastAPI application running on AWS Lambda"
authors = ["Felipe Rooke <felipe@rooke.com.br>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
mangum = "^0.17.0"
uvicorn = "^0.27.0"
boto3 = "^1.34.41"
aioboto3 = "^12.4.0"
markitdown = {version = ">=0.1.0", extras = ["docx", "pdf", "xlsx"]}
python-multipart = "^0.0.20"
google-generativeai = "^0.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["app/"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 